Fix avatar display on mobile

--- a/webapp/app/components/users/avatar-image/component.scss
+++ b/webapp/app/components/users/avatar-image/component.scss
@@ -1,5 +1,4 @@
 & {
     @extend .rounded-circle;
-    @extend .mr-2;
     height: 1.5em;
 }
